add starter guides and replace homepage

--- a/index.htm
+++ b/index.htm
@@ -1,22 +1,179 @@
-<!DOCTYPE html>
-
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-	<title>Date Girls Easy</title>
-	<meta name="author" content="DB">
-<meta name="description" content="The original homepage of Dating">
-<meta name="keywords" content="pictures, videos, chat, pick up girls">
-	<style type="text/css">
-.auto-style1 {
-	font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
-}
-</style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Date Girls Easy modern dating guides and app reviews</title>
+  <meta name="description" content="PG 13 dating education with real scripts, app reviews, and first date playbooks. Learn what works today and avoid bad advice." />
+  <link rel="canonical" href="https://dategirlseasy.com/" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Date Girls Easy modern dating guides" />
+  <meta property="og:description" content="PG 13 dating education with real scripts, app reviews, and first date playbooks." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://dategirlseasy.com/" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Date Girls Easy modern dating guides" />
+  <meta name="twitter:description" content="PG 13 dating education with real scripts, app reviews, and first date playbooks." />
+
+  <style>
+    :root{
+      --bg:#0f1223;
+      --card:#171a31;
+      --text:#e9ecf8;
+      --muted:#b6bdd7;
+      --brand:#7b5cff;
+      --accent:#34d399;
+    }
+    *{box-sizing:border-box}
+    html,body{margin:0;height:100%;background:var(--bg);color:var(--text);font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial}
+    a{color:var(--brand);text-decoration:none}
+    a:hover{text-decoration:underline}
+    header{position:sticky;top:0;background:rgba(15,18,35,.8);backdrop-filter:saturate(140%) blur(8px);border-bottom:1px solid #262947}
+    .wrap{max-width:1000px;margin:0 auto;padding:18px}
+    .brand{display:flex;align-items:center;gap:10px;font-weight:700;font-size:20px;letter-spacing:.3px}
+    .nav{display:flex;gap:18px;align-items:center}
+    .nav a{color:var(--muted)}
+    .hero{padding:64px 18px 42px;background:
+      radial-gradient(1000px 400px at 50% -10%, #2a1f66 0%, rgba(42,31,102,0) 60%),
+      radial-gradient(600px 260px at 90% 20%, rgba(52,211,153,.25) 0%, rgba(52,211,153,0) 60%);}
+    .hero-inner{max-width:1000px;margin:0 auto;display:grid;grid-template-columns:1fr;gap:14px}
+    h1{font-size:36px;line-height:1.15;margin:0}
+    .lead{font-size:18px;color:var(--muted);max-width:720px}
+    .cta{display:flex;gap:10px;margin-top:14px;flex-wrap:wrap}
+    .btn{background:var(--brand);color:white;border:none;border-radius:10px;padding:12px 16px;font-weight:600;cursor:pointer}
+    .btn.secondary{background:transparent;border:1px solid #2a2f58;color:var(--text)}
+    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:14px}
+    .card{background:var(--card);border:1px solid #262947;border-radius:14px;padding:16px}
+    .card h3{margin:0 0 6px 0;font-size:18px}
+    .muted{color:var(--muted)}
+    .footer{padding:28px 18px;border-top:1px solid #262947;background:#0e1120;color:var(--muted);font-size:14px}
+    form{display:flex;gap:10px;flex-wrap:wrap}
+    input[type="email"]{flex:1;min-width:220px;border-radius:10px;border:1px solid #2a2f58;background:#0e1120;color:var(--text);padding:12px}
+    .note{font-size:13px;color:var(--muted)}
+    @media (min-width:900px){
+      h1{font-size:44px}
+    }
+  </style>
+
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"WebSite",
+    "name":"Date Girls Easy",
+    "url":"https://dategirlseasy.com/",
+    "potentialAction":{
+      "@type":"SearchAction",
+      "target":"https://dategirlseasy.com/?q={search_term_string}",
+      "query-input":"required name=search_term_string"
+    }
+  }
+  </script>
 </head>
-<body style="background-color: black; text-align:center">
-<p style="color: pink; font-size:50px" class="auto-style1">Your dating life is about to get a lot easier!</p>
-<p style="color: pink">Check back later while we compile all the information you will need.</p>
+<body>
 
+<header>
+  <div class="wrap" style="display:flex;justify-content:space-between;align-items:center;">
+    <div class="brand">Date Girls Easy</div>
+    <nav class="nav">
+      <a href="#guides">Guides</a>
+      <a href="#reviews">App reviews</a>
+      <a href="#safety">Safety</a>
+      <a href="#disclosure">Disclosure</a>
+    </nav>
+  </div>
+</header>
 
+<section class="hero">
+  <div class="hero-inner">
+    <h1>Modern dating that actually works</h1>
+    <p class="lead">Simple scripts and step by step playbooks for profiles, messages, and first dates. Clear, respectful, and PG 13. No gimmicks.</p>
+    <div class="cta">
+      <a class="btn" href="#join">Get the First Date Texting Pack</a>
+      <a class="btn secondary" href="#guides">Browse the starter guides</a>
+    </div>
+  </div>
+</section>
 
+<main class="wrap">
+  <section id="guides" class="grid" aria-label="Starter guides">
+    <div class="card">
+      <h3>Profile photo checklist</h3>
+      <p class="muted">What to shoot and what to skip. Plus pose prompts.</p>
+      <a href="/guides/profile-photo-checklist.html">Read guide</a>
+    </div>
+    <div class="card">
+      <h3>Bio templates by personality</h3>
+      <p class="muted">Copy friendly examples you can tweak in minutes.</p>
+      <a href="/guides/bio-templates.html">Read guide</a>
+    </div>
+    <div class="card">
+      <h3>Openers that get replies</h3>
+      <p class="muted">Ten proven starters with follow ups for yes and maybe.</p>
+      <a href="/guides/openers-that-get-replies.html">Read guide</a>
+    </div>
+  </section>
+
+  <section id="reviews" style="margin-top:28px">
+    <h2>App reviews and matchups</h2>
+    <div class="grid">
+      <div class="card">
+        <h3>Tinder vs Hinge vs Bumble</h3>
+        <p class="muted">Who wins for over 30 in the United States</p>
+        <a href="/reviews/tinder-hinge-bumble.html">See comparison</a>
+      </div>
+      <div class="card">
+        <h3>Best niche apps by goal</h3>
+        <p class="muted">Find the right fit without wasting time</p>
+        <a href="#">Browse picks</a>
+      </div>
+    </div>
+    <p class="note" style="margin-top:10px">Some links may earn a commission at no cost to you. We only recommend tools that pass our test plan.</p>
+  </section>
+
+  <section id="safety" style="margin-top:28px">
+    <h2>Safety first</h2>
+    <div class="grid">
+      <div class="card">
+        <h3>First meeting checklist</h3>
+        <p class="muted">Share your plan with a friend and use public venues</p>
+        <a href="/safety/first-meeting-checklist.html">Read checklist</a>
+      </div>
+      <div class="card">
+        <h3>Red flags to avoid</h3>
+        <p class="muted">Early warning signs and how to exit</p>
+        <a href="#">Read guide</a>
+      </div>
+    </div>
+  </section>
+
+  <section id="join" style="margin-top:28px">
+    <h2>Join free and get the texting pack</h2>
+    <p class="muted">Enter your email to receive the First Date Texting Pack and new guides each week.</p>
+    <form action="https://buttondown.email/api/emails/embed-subscribe/YOUR_LIST" method="post" target="_blank">
+      <input type="email" name="email" placeholder="you@example.com" required />
+      <button class="btn" type="submit">Send it to me</button>
+    </form>
+    <p class="note">No spam. One click unsubscribe.</p>
+  </section>
+
+  <section id="disclosure" style="margin-top:28px">
+    <h2>FTC disclosure</h2>
+    <p class="muted">This site uses affiliate links. If you buy through our links we may earn a commission. Your price does not change.</p>
+  </section>
+</main>
+
+<footer class="footer">
+  <div class="wrap">
+    <div>Date Girls Easy © <span id="y"></span></div>
+    <div class="muted">Educational content only. Not a matchmaking service.</div>
+  </div>
+</footer>
+
+<script>
+  document.getElementById('y').textContent = new Date().getFullYear();
+</script>
 </body>
 </html>
