--- a/index.htm
+++ b/index.htm
@@ -3,59 +3,65 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Date Girls Easy modern dating guides and app reviews</title>
-  <meta name="description" content="PG 13 dating education with real scripts, app reviews, and first date playbooks. Learn what works today and avoid bad advice." />
+  <title>Date Girls Easy win more matches and better dates</title>
+  <meta name="description" content="Get real dates with a confident profile, messages that get yes, and first date playbooks. Clear scripts, step by step plans, and honest reviews." />
   <link rel="canonical" href="https://dategirlseasy.com/" />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Date Girls Easy modern dating guides" />
-  <meta property="og:description" content="PG 13 dating education with real scripts, app reviews, and first date playbooks." />
+  <meta property="og:title" content="Date Girls Easy win more matches and better dates" />
+  <meta property="og:description" content="Scripts and playbooks that turn matches into real dates. Learn what works today." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://dategirlseasy.com/" />
+  <meta property="og:image" content="https://dategirlseasy.com/assets/hero.jpg" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Date Girls Easy modern dating guides" />
-  <meta name="twitter:description" content="PG 13 dating education with real scripts, app reviews, and first date playbooks." />
+  <meta name="twitter:title" content="Date Girls Easy win more matches and better dates" />
+  <meta name="twitter:description" content="Scripts and playbooks that turn matches into real dates." />
+  <meta name="twitter:image" content="https://dategirlseasy.com/assets/hero.jpg" />
 
   <style>
     :root{
-      --bg:#0f1223;
-      --card:#171a31;
-      --text:#e9ecf8;
-      --muted:#b6bdd7;
-      --brand:#7b5cff;
-      --accent:#34d399;
+      --bg:#0b0d19;
+      --card:#14172a;
+      --text:#eef0fb;
+      --muted:#b4bbd6;
+      --brand:#8b5dff;
+      --accent:#22d3a8;
     }
     *{box-sizing:border-box}
-    html,body{margin:0;height:100%;background:var(--bg);color:var(--text);font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial}
+    html,body{margin:0;background:var(--bg);color:var(--text);font-family:ui-sans-serif,system-ui,Segoe UI,Inter,Arial}
     a{color:var(--brand);text-decoration:none}
     a:hover{text-decoration:underline}
-    header{position:sticky;top:0;background:rgba(15,18,35,.8);backdrop-filter:saturate(140%) blur(8px);border-bottom:1px solid #262947}
-    .wrap{max-width:1000px;margin:0 auto;padding:18px}
-    .brand{display:flex;align-items:center;gap:10px;font-weight:700;font-size:20px;letter-spacing:.3px}
+    .wrap{max-width:1100px;margin:0 auto;padding:18px}
+    header{position:sticky;top:0;background:rgba(11,13,25,.8);backdrop-filter:blur(8px);border-bottom:1px solid #232748}
+    .brand{font-weight:800;font-size:20px}
     .nav{display:flex;gap:18px;align-items:center}
-    .nav a{color:var(--muted)}
-    .hero{padding:64px 18px 42px;background:
-      radial-gradient(1000px 400px at 50% -10%, #2a1f66 0%, rgba(42,31,102,0) 60%),
-      radial-gradient(600px 260px at 90% 20%, rgba(52,211,153,.25) 0%, rgba(52,211,153,0) 60%);}
-    .hero-inner{max-width:1000px;margin:0 auto;display:grid;grid-template-columns:1fr;gap:14px}
-    h1{font-size:36px;line-height:1.15;margin:0}
-    .lead{font-size:18px;color:var(--muted);max-width:720px}
+    .hero{position:relative;min-height:62vh;display:grid;place-items:end;overflow:hidden}
+    .hero img{position:absolute;inset:0;width:100%;height:100%;object-fit:cover;filter:contrast(1.05) saturate(1.05) brightness(.8)}
+    .shade{position:absolute;inset:0;background:linear-gradient(180deg, rgba(11,13,25,0) 0%, rgba(11,13,25,.9) 65%, rgba(11,13,25,1) 100%)}
+    .hero-content{position:relative;z-index:2;padding:28px 18px}
+    h1{font-size:44px;line-height:1.05;margin:0 0 8px 0}
+    .lead{font-size:18px;color:var(--muted);max-width:780px}
     .cta{display:flex;gap:10px;margin-top:14px;flex-wrap:wrap}
-    .btn{background:var(--brand);color:white;border:none;border-radius:10px;padding:12px 16px;font-weight:600;cursor:pointer}
+    .btn{background:var(--brand);color:white;border:none;border-radius:12px;padding:12px 16px;font-weight:700;cursor:pointer}
     .btn.secondary{background:transparent;border:1px solid #2a2f58;color:var(--text)}
-    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:14px}
-    .card{background:var(--card);border:1px solid #262947;border-radius:14px;padding:16px}
+    .pillars{padding:28px 18px}
+    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:14px}
+    .card{background:var(--card);border:1px solid #24294c;border-radius:14px;overflow:hidden}
+    .card img{width:100%;height:180px;object-fit:cover}
+    .card .pad{padding:14px}
     .card h3{margin:0 0 6px 0;font-size:18px}
     .muted{color:var(--muted)}
-    .footer{padding:28px 18px;border-top:1px solid #262947;background:#0e1120;color:var(--muted);font-size:14px}
-    form{display:flex;gap:10px;flex-wrap:wrap}
+    .bar{display:flex;gap:10px;flex-wrap:wrap;margin-top:10px}
+    .bar div{background:#0e1224;border:1px solid #232748;color:var(--muted);padding:8px 10px;border-radius:999px;font-size:13px}
+    .proof{padding:8px 18px 28px}
+    .proof ul{display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:10px;padding-left:18px}
+    .join{padding:0 18px 28px}
     input[type="email"]{flex:1;min-width:220px;border-radius:10px;border:1px solid #2a2f58;background:#0e1120;color:var(--text);padding:12px}
-    .note{font-size:13px;color:var(--muted)}
-    @media (min-width:900px){
-      h1{font-size:44px}
-    }
+    form{display:flex;gap:10px;flex-wrap:wrap}
+    footer{padding:28px 18px;border-top:1px solid #232748;background:#0a0c17;color:var(--muted);font-size:14px}
+    @media (max-width:720px){h1{font-size:34px}}
   </style>
 
   <script type="application/ld+json">
@@ -64,6 +70,7 @@
     "@type":"WebSite",
     "name":"Date Girls Easy",
     "url":"https://dategirlseasy.com/",
+    "publisher":{"@type":"Organization","name":"Date Girls Easy"},
     "potentialAction":{
       "@type":"SearchAction",
       "target":"https://dategirlseasy.com/?q={search_term_string}",
@@ -78,102 +85,96 @@
   <div class="wrap" style="display:flex;justify-content:space-between;align-items:center;">
     <div class="brand">Date Girls Easy</div>
     <nav class="nav">
+      <a href="#how-it-works">How it works</a>
       <a href="#guides">Guides</a>
       <a href="#reviews">App reviews</a>
-      <a href="#safety">Safety</a>
-      <a href="#disclosure">Disclosure</a>
+      <a href="#join">Join</a>
     </nav>
   </div>
 </header>
 
-<section class="hero">
-  <div class="hero-inner">
-    <h1>Modern dating that actually works</h1>
-    <p class="lead">Simple scripts and step by step playbooks for profiles, messages, and first dates. Clear, respectful, and PG 13. No gimmicks.</p>
+<section class="hero" aria-label="Confident dating imagery">
+  <img src="/assets/hero.jpg" alt="Confident woman smiling during a night out" />
+  <div class="shade"></div>
+  <div class="hero-content wrap">
+    <h1>Turn matches into real dates</h1>
+    <p class="lead">Look sharp. Send messages that spark. Plan dates she loves. This is dating that feels exciting and respectful and it works now.</p>
     <div class="cta">
       <a class="btn" href="#join">Get the First Date Texting Pack</a>
-      <a class="btn secondary" href="#guides">Browse the starter guides</a>
+      <a class="btn secondary" href="#guides">See the starter guides</a>
     </div>
   </div>
 </section>
 
-<main class="wrap">
-  <section id="guides" class="grid" aria-label="Starter guides">
+<section id="how-it-works" class="pillars wrap">
+  <h2>Your fast path</h2>
+  <div class="grid">
     <div class="card">
-      <h3>Profile photo checklist</h3>
-      <p class="muted">What to shoot and what to skip. Plus pose prompts.</p>
-      <a href="/guides/profile-photo-checklist.html">Read guide</a>
+      <img src="/assets/grid1.jpg" alt="Stylish profile photos moodboard" />
+      <div class="pad">
+        <h3>Upgrade your profile</h3>
+        <p class="muted">Photo checklist and bio templates that attract the right women.</p>
+        <div class="bar">
+          <div>Photo checklist</div>
+          <div>Bio templates</div>
+          <div>Pose prompts</div>
+        </div>
+        <p style="margin-top:10px"><a href="/guides/profile-photo-checklist.html">Start here</a></p>
+      </div>
     </div>
     <div class="card">
-      <h3>Bio templates by personality</h3>
-      <p class="muted">Copy friendly examples you can tweak in minutes.</p>
-      <a href="/guides/bio-templates.html">Read guide</a>
+      <div class="pad">
+        <h3>Messages that get yes</h3>
+        <p class="muted">Copy friendly openers and follow ups that keep the spark alive.</p>
+        <p style="margin-top:10px"><a href="/guides/openers-that-get-replies.html">See scripts</a></p>
+      </div>
     </div>
     <div class="card">
-      <h3>Openers that get replies</h3>
-      <p class="muted">Ten proven starters with follow ups for yes and maybe.</p>
-      <a href="/guides/openers-that-get-replies.html">Read guide</a>
-    </div>
-  </section>
-
-  <section id="reviews" style="margin-top:28px">
-    <h2>App reviews and matchups</h2>
-    <div class="grid">
-      <div class="card">
-        <h3>Tinder vs Hinge vs Bumble</h3>
-        <p class="muted">Who wins for over 30 in the United States</p>
-        <a href="/reviews/tinder-hinge-bumble.html">See comparison</a>
-      </div>
-      <div class="card">
-        <h3>Best niche apps by goal</h3>
-        <p class="muted">Find the right fit without wasting time</p>
-        <a href="#">Browse picks</a>
+      <div class="pad">
+        <h3>First date playbooks</h3>
+        <p class="muted">Simple plans for coffee, dinner, and nights out that feel fun and natural.</p>
+        <p style="margin-top:10px"><a href="#">Pick a plan</a></p>
       </div>
     </div>
-    <p class="note" style="margin-top:10px">Some links may earn a commission at no cost to you. We only recommend tools that pass our test plan.</p>
-  </section>
-
-  <section id="safety" style="margin-top:28px">
-    <h2>Safety first</h2>
-    <div class="grid">
-      <div class="card">
-        <h3>First meeting checklist</h3>
-        <p class="muted">Share your plan with a friend and use public venues</p>
-        <a href="/safety/first-meeting-checklist.html">Read checklist</a>
-      </div>
-      <div class="card">
-        <h3>Red flags to avoid</h3>
-        <p class="muted">Early warning signs and how to exit</p>
-        <a href="#">Read guide</a>
+    <div class="card">
+      <div class="pad">
+        <h3>App matchmaker</h3>
+        <p class="muted">Find the app that fits your goal and your city. Real talk reviews only.</p>
+        <p style="margin-top:10px"><a href="/reviews/tinder-hinge-bumble.html">Compare apps</a></p>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
-  <section id="join" style="margin-top:28px">
-    <h2>Join free and get the texting pack</h2>
-    <p class="muted">Enter your email to receive the First Date Texting Pack and new guides each week.</p>
-    <form action="https://buttondown.email/api/emails/embed-subscribe/YOUR_LIST" method="post" target="_blank">
-      <input type="email" name="email" placeholder="you@example.com" required />
-      <button class="btn" type="submit">Send it to me</button>
-    </form>
-    <p class="note">No spam. One click unsubscribe.</p>
-  </section>
+<section class="proof wrap">
+  <h2>What you get</h2>
+  <ul>
+    <li>Clear steps that build confidence fast</li>
+    <li>Examples you can copy and customize in minutes</li>
+    <li>Advice that respects women and still lights a spark</li>
+  </ul>
+  <p class="muted">Educational content with affiliate links. Your price does not change.</p>
+</section>
 
-  <section id="disclosure" style="margin-top:28px">
-    <h2>FTC disclosure</h2>
-    <p class="muted">This site uses affiliate links. If you buy through our links we may earn a commission. Your price does not change.</p>
-  </section>
-</main>
+<section id="join" class="join wrap">
+  <h2>Join free and get the texting pack</h2>
+  <p class="muted">Enter your email to receive the First Date Texting Pack and new guides each week.</p>
+  <form action="https://buttondown.email/api/emails/embed-subscribe/YOUR_LIST" method="post" target="_blank">
+    <input type="email" name="email" placeholder="you@example.com" required />
+    <button class="btn" type="submit">Send it to me</button>
+  </form>
+  <p class="muted" style="font-size:13px">No spam. One click unsubscribe.</p>
+</section>
 
-<footer class="footer">
+<footer>
   <div class="wrap">
     <div>Date Girls Easy © <span id="y"></span></div>
-    <div class="muted">Educational content only. Not a matchmaking service.</div>
+    <div class="muted">This site uses affiliate links. See disclosure on each review page.</div>
   </div>
 </footer>
 
 <script>
-  document.getElementById('y').textContent = new Date().getFullYear();
+  document.getElementById('y').textContent = new Date().getFullYear()
 </script>
 </body>
 </html>
