Wire all pages and links. Update sitemap and homepage.

--- a/index.htm
+++ b/index.htm
@@ -2,433 +2,295 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <title>Date Girls Easy — Simple guides that get real results</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Date Girls Easy win more matches and better dates</title>
     <meta
       name="description"
-      content="Get real dates with a confident profile, messages that get yes, and first date playbooks. Clear scripts, step by step plans, and honest reviews."
+      content="High trust dating guides. Build a profile that attracts, send openers that get replies, and turn chats into a simple first meet."
     />
     <link rel="canonical" href="https://dategirlseasy.com/" />
 
-    <!-- Open Graph -->
+    <!-- Fonts and base styles -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/styles.css" />
+
+    <!-- Social previews -->
     <meta
       property="og:title"
-      content="Date Girls Easy win more matches and better dates"
+      content="Date Girls Easy — Simple guides that get real results"
     />
     <meta
       property="og:description"
-      content="Scripts and playbooks that turn matches into real dates. Learn what works today."
+      content="Build a profile that attracts, send openers that get replies, and turn chats into a simple first meet."
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://dategirlseasy.com/" />
     <meta
       property="og:image"
-      content="https://dategirlseasy.com/assets/hero.jpg"
+      content="https://dategirlseasy.com/assets/og/openers.jpg"
     />
-
-    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Date Girls Easy win more matches and better dates"
+      content="Date Girls Easy — Simple guides that get real results"
     />
     <meta
       name="twitter:description"
-      content="Scripts and playbooks that turn matches into real dates."
+      content="Build a profile that attracts, send openers that get replies, and turn chats into a simple first meet."
     />
     <meta
       name="twitter:image"
-      content="https://dategirlseasy.com/assets/hero.jpg"
+      content="https://dategirlseasy.com/assets/og/openers.jpg"
     />
-
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;600;800&display=swap"
-      rel="stylesheet"
-    />
-
-    <style>
-      :root {
-        --bg: #0b0d19;
-        --card: #14172a;
-        --text: #eef0fb;
-        --muted: #b4bbd6;
-        --brand: #8b5dff;
-        --accent: #22d3a8;
-      }
-      * {
-        box-sizing: border-box;
-      }
-      html,
-      body {
-        margin: 0;
-        background: var(--bg);
-        color: var(--text);
-        font-family: "Inter", ui-sans-serif, system-ui, Segoe UI, Roboto, Arial;
-      }
-      a {
-        color: var(--brand);
-        text-decoration: none;
-      }
-      a:hover {
-        text-decoration: underline;
-      }
-      .wrap {
-        max-width: 1100px;
-        margin: 0 auto;
-        padding: 18px;
-      }
-      header {
-        position: sticky;
-        top: 0;
-        background: rgba(11, 13, 25, 0.8);
-        backdrop-filter: blur(8px);
-        border-bottom: 1px solid #232748;
-      }
-
-      /* Brand mark upgrade */
-      .brand {
-        font-family: "Bebas Neue", Arial, sans-serif;
-        font-weight: 800;
-        font-size: 28px;
-        letter-spacing: 0.6px;
-        line-height: 1;
-        background: linear-gradient(90deg, #ffffff, #c9c9ff);
-        -webkit-background-clip: text;
-        background-clip: text;
-        color: transparent;
-        text-transform: uppercase;
-      }
-
-      .nav {
-        display: flex;
-        gap: 18px;
-        align-items: center;
-      }
-
-      .hero {
-        position: relative;
-        min-height: 62vh;
-        display: grid;
-        place-items: end;
-        overflow: hidden;
-      }
-      .hero img {
-        position: absolute;
-        inset: 0;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        filter: contrast(1.05) saturate(1.05) brightness(0.8);
-      }
-      .shade {
-        position: absolute;
-        inset: 0;
-        background: linear-gradient(
-          180deg,
-          rgba(11, 13, 25, 0) 0%,
-          rgba(11, 13, 25, 0.9) 65%,
-          rgba(11, 13, 25, 1) 100%
-        );
-      }
-      .hero-content {
-        position: relative;
-        z-index: 2;
-        padding: 28px 18px;
-      }
-
-      h1 {
-        font-family: "Inter", ui-sans-serif, system-ui, Segoe UI, Roboto, Arial;
-        font-weight: 800;
-        font-size: 44px;
-        line-height: 1.05;
-        margin: 0 0 8px 0;
-      }
-      h2,
-      h3 {
-        font-family: "Inter", ui-sans-serif, system-ui, Segoe UI, Roboto, Arial;
-        font-weight: 800;
-      }
-      .lead {
-        font-size: 18px;
-        color: var(--muted);
-        max-width: 780px;
-      }
-
-      .cta {
-        display: flex;
-        gap: 10px;
-        margin-top: 14px;
-        flex-wrap: wrap;
-      }
-      .btn {
-        background: var(--brand);
-        color: #fff;
-        border: none;
-        border-radius: 12px;
-        padding: 12px 16px;
-        font-weight: 800;
-        letter-spacing: 0.2px;
-        cursor: pointer;
-        transition: transform 0.04s ease;
-      }
-      .btn:hover {
-        transform: translateY(-1px);
-      }
-      .btn.secondary {
-        background: transparent;
-        border: 1px solid #2a2f58;
-        color: var(--text);
-      }
-
-      .pillars {
-        padding: 28px 18px;
-      }
-      .grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-        gap: 14px;
-      }
-      .card {
-        background: var(--card);
-        border: 1px solid #24294c;
-        border-radius: 14px;
-        overflow: hidden;
-      }
-      .card img {
-        width: 100%;
-        height: 180px;
-        object-fit: cover;
-      }
-      .card .pad {
-        padding: 14px;
-      }
-      .card h3 {
-        margin: 0 0 6px 0;
-        font-size: 18px;
-      }
-      .muted {
-        color: var(--muted);
-      }
-      .bar {
-        display: flex;
-        gap: 10px;
-        flex-wrap: wrap;
-        margin-top: 10px;
-      }
-      .bar div {
-        background: #0e1224;
-        border: 1px solid #232748;
-        color: var(--muted);
-        padding: 8px 10px;
-        border-radius: 999px;
-        font-size: 13px;
-      }
-
-      .proof {
-        padding: 8px 18px 28px;
-      }
-      .proof ul {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-        gap: 10px;
-        padding-left: 18px;
-      }
-
-      .join {
-        padding: 0 18px 28px;
-      }
-      input[type="email"] {
-        flex: 1;
-        min-width: 220px;
-        border-radius: 10px;
-        border: 1px solid #2a2f58;
-        background: #0e1120;
-        color: var(--text);
-        padding: 12px;
-      }
-      form {
-        display: flex;
-        gap: 10px;
-        flex-wrap: wrap;
-      }
-
-      footer {
-        padding: 28px 18px;
-        border-top: 1px solid #232748;
-        background: #0a0c17;
-        color: var(--muted);
-        font-size: 14px;
-      }
-
-      @media (max-width: 720px) {
-        h1 {
-          font-size: 34px;
-        }
-      }
-    </style>
-
-    <!-- Schema -->
-    <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type": "WebSite",
-        "name": "Date Girls Easy",
-        "url": "https://dategirlseasy.com/",
-        "publisher": { "@type": "Organization", "name": "Date Girls Easy" },
-        "potentialAction": {
-          "@type": "SearchAction",
-          "target": "https://dategirlseasy.com/?q={search_term_string}",
-          "query-input": "required name=search_term_string"
-        }
-      }
-    </script>
   </head>
   <body>
-    <header>
-      <div
-        class="wrap"
-        style="
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-        "
-      >
-        <div class="brand">Date Girls Easy</div>
-        <nav class="nav">
-          <a href="#how-it-works">How it works</a>
-          <a href="#guides">Guides</a>
-          <a href="#reviews">App reviews</a>
-          <a href="#join">Join</a>
+    <header class="site-header">
+      <div class="container">
+        <a class="brand" href="/" aria-label="Date Girls Easy"
+          >Date Girls Easy</a
+        >
+        <nav class="top-nav" aria-label="Main">
+          <a href="/how-it-works.html">How it works</a>
+          <a href="/guides/">Guides</a>
+          <a href="/reviews/">App reviews</a>
+          <a href="/join.html" class="button">Join</a>
         </nav>
       </div>
     </header>
 
-    <section class="hero" aria-label="Confident dating imagery">
-      <img
-        src="/assets/hero.jpg"
-        alt="Confident woman smiling during a night out"
-      />
-      <div class="shade"></div>
-      <div class="hero-content wrap">
-        <h1>Turn matches into real dates</h1>
-        <p class="lead">
-          Look sharp. Send messages that spark. Plan dates she loves. This is
-          dating that feels exciting and respectful and it works now.
+    <section class="hero">
+      <div class="container">
+        <h1>Simple steps. Better matches.</h1>
+        <p class="lede">
+          Build a profile that attracts, open with confidence, and turn chats
+          into a great first meet.
         </p>
-        <div class="cta">
-          <a class="btn" href="#join">Get the First Date Texting Pack</a>
-          <a class="btn secondary" href="#guides">See the starter guides</a>
+        <div class="cta-row">
+          <a class="button" href="/guides/profile-photo-checklist.html"
+            >Start with photos</a
+          >
+          <a class="button secondary" href="/guides/bio-templates.html"
+            >Write your bio</a
+          >
         </div>
       </div>
     </section>
 
-    <section id="how-it-works" class="pillars wrap">
-      <h2>Your fast path</h2>
-      <div class="grid">
-        <div class="card">
-          <img src="/assets/grid1.jpg" alt="Stylish profile photos moodboard" />
-          <div class="pad">
-            <h3>Upgrade your profile</h3>
-            <p class="muted">
-              Photo checklist and bio templates that attract the right women.
-            </p>
-            <div class="bar">
-              <div>Photo checklist</div>
-              <div>Bio templates</div>
-              <div>Pose prompts</div>
-            </div>
-            <p style="margin-top: 10px">
-              <a href="/guides/profile-photo-checklist.html">Start here</a>
-            </p>
-          </div>
-        </div>
-        <div class="card">
-          <div class="pad">
-            <h3>Messages that get yes</h3>
-            <p class="muted">
-              Copy friendly openers and follow ups that keep the spark alive.
-            </p>
-            <p style="margin-top: 10px">
-              <a href="/guides/openers-that-get-replies.html">See scripts</a>
-            </p>
-          </div>
-        </div>
-        <div class="card">
-          <div class="pad">
-            <h3>First date playbooks</h3>
-            <p class="muted">
-              Simple plans for coffee, dinner, and nights out that feel fun and
-              natural.
-            </p>
-            <p style="margin-top: 10px">
-              <a href="/playbooks/first-date-playbook.html">Pick a plan</a>
-            </p>
-          </div>
-        </div>
-        <div class="card">
-          <div class="pad">
-            <h3>App matchmaker</h3>
-            <p class="muted">
-              Find the app that fits your goal and your city. Real talk reviews
-              only.
-            </p>
-            <p style="margin-top: 10px">
-              <a href="/reviews/tinder-hinge-bumble.html">Compare apps</a>
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
+    <main>
+      <section class="cards container">
+        <h2>Start here</h2>
+        <ul class="card-grid">
+          <li class="card">
+            <a href="/guides/profile-photo-checklist.html">
+              <h3>Profile Photo Checklist</h3>
+              <p>Clear steps to shoot photos that get more matches.</p>
+            </a>
+          </li>
+          <li class="card">
+            <a href="/guides/bio-templates.html">
+              <h3>Bio Templates</h3>
+              <p>Short bios by personality with copy and paste options.</p>
+            </a>
+          </li>
+          <li class="card">
+            <a href="/guides/openers-that-get-replies.html">
+              <h3>Openers that get replies</h3>
+              <p>Lines that feel natural and get fast responses.</p>
+            </a>
+          </li>
+          <li class="card">
+            <a href="/playbooks/first-date-playbook.html">
+              <h3>First Date Playbook</h3>
+              <p>From first reply to a simple plan that feels easy.</p>
+            </a>
+          </li>
+        </ul>
+      </section>
 
-    <section class="proof wrap">
-      <h2>What you get</h2>
-      <ul>
-        <li>Clear steps that build confidence fast</li>
-        <li>Examples you can copy and customize in minutes</li>
-        <li>Advice that respects women and still lights a spark</li>
-      </ul>
-      <p class="muted">
-        Educational content with affiliate links. Your price does not change.
-      </p>
-    </section>
+      <section class="cards container">
+        <h2>Compare apps</h2>
+        <ul class="card-grid">
+          <li class="card">
+            <a href="/reviews/">
+              <h3>App reviews and matchmaker</h3>
+              <p>Real talk reviews and which app fits your goal and city.</p>
+            </a>
+          </li>
+          <li class="card">
+            <a href="/reviews/tinder.html">
+              <h3>Tinder review</h3>
+              <p>Who it works for, pros and cons, and quick tips.</p>
+            </a>
+          </li>
+        </ul>
+      </section>
 
-    <section id="join" class="join wrap">
-      <h2>Join free and get the texting pack</h2>
-      <p class="muted">
-        Enter your email to receive the First Date Texting Pack and new guides
-        each week.
-      </p>
-      <form
-        action="https://buttondown.email/api/emails/embed-subscribe/YOUR_LIST"
-        method="post"
-        target="_blank"
-      >
-        <input
-          type="email"
-          name="email"
-          placeholder="you@example.com"
-          required
-        />
-        <button class="btn" type="submit">Send it to me</button>
-      </form>
-      <p class="muted" style="font-size: 13px">
-        No spam. One click unsubscribe.
-      </p>
-    </section>
+      <section class="container">
+        <h2>How it works</h2>
+        <p>
+          Three steps that are easy to follow. Photos and bio. Openers and flow.
+          First meet plan.
+        </p>
+        <p><a class="button" href="/how-it-works.html">See the overview</a></p>
+      </section>
 
-    <footer>
-      <div class="wrap">
-        <div>Date Girls Easy © <span id="y"></span></div>
-        <div class="muted">
-          This site uses affiliate links. See disclosure on each review page.
-        </div>
+      <section class="container">
+        <h2>Join the list</h2>
+        <p>
+          Get new guides and playbooks first. Short emails with real examples
+          you can use.
+        </p>
+        <p><a class="button" href="/join.html">Join now</a></p>
+      </section>
+    </main>
+
+    <footer class="site-footer">
+      <div class="container">
+        <nav class="footer-nav" aria-label="Footer">
+          <a href="/how-it-works.html">How it works</a>
+          <a href="/guides/">Guides</a>
+          <a href="/reviews/">App reviews</a>
+          <a href="/join.html">Join</a>
+        </nav>
+        <p>© <span id="yr"></span> Date Girls Easy</p>
       </div>
     </footer>
 
     <script>
-      document.getElementById("y").textContent = new Date().getFullYear();
+      document.getElementById("yr").textContent = new Date().getFullYear();
     </script>
+
+    <style>
+      :root {
+        --ink: #161616;
+        --ink2: #3a3a3a;
+        --bg: #ffffff;
+        --brand: #6e4cff;
+        --muted: #f6f6f8;
+      }
+      body {
+        margin: 0;
+        font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial;
+        color: var(--ink);
+        background: var(--bg);
+      }
+      .container {
+        max-width: 1100px;
+        margin: 0 auto;
+        padding: 20px;
+      }
+      .site-header {
+        border-bottom: 1px solid #eee;
+      }
+      .brand {
+        font-family: "Bebas Neue", sans-serif;
+        font-size: 28px;
+        text-decoration: none;
+        color: var(--ink);
+        letter-spacing: 0.5px;
+      }
+      .top-nav a {
+        margin-left: 16px;
+        text-decoration: none;
+        color: var(--ink2);
+      }
+      .top-nav .button {
+        margin-left: 16px;
+      }
+      .hero {
+        padding: 56px 0;
+        background: var(--muted);
+      }
+      h1 {
+        font-family: "Bebas Neue", sans-serif;
+        font-size: 56px;
+        margin: 0 0 10px;
+      }
+      h2 {
+        font-size: 28px;
+        margin-top: 30px;
+      }
+      h3 {
+        font-size: 20px;
+        margin: 0 0 6px;
+      }
+      .lede {
+        color: var(--ink2);
+        max-width: 720px;
+      }
+      .cta-row {
+        margin-top: 16px;
+        display: flex;
+        gap: 12px;
+        flex-wrap: wrap;
+      }
+      .button {
+        display: inline-block;
+        padding: 10px 16px;
+        border-radius: 8px;
+        background: var(--brand);
+        color: #fff;
+        text-decoration: none;
+        font-weight: 700;
+      }
+      .button.secondary {
+        background: #ddd;
+        color: #000;
+      }
+      .cards .card-grid {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        display: grid;
+        gap: 16px;
+        grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+      }
+      .card {
+        background: #fff;
+        border: 1px solid #eee;
+        border-radius: 12px;
+        padding: 16px;
+        transition: transform 0.1s ease;
+      }
+      .card:hover {
+        transform: translateY(-2px);
+      }
+      .site-footer {
+        border-top: 1px solid #eee;
+        margin-top: 40px;
+      }
+      .footer-nav a {
+        margin-right: 12px;
+        text-decoration: none;
+        color: var(--ink2);
+      }
+      @media (prefers-color-scheme: dark) {
+        :root {
+          --bg: #0b0c10;
+          --ink: #f3f4f6;
+          --ink2: #c9cbd1;
+          --muted: #14151b;
+        }
+        .card {
+          background: #101219;
+          border-color: #1e2130;
+        }
+        .hero {
+          background: var(--muted);
+        }
+        .button.secondary {
+          background: #2a2d3b;
+          color: #fff;
+        }
+        .site-header,
+        .site-footer {
+          border-color: #1e2130;
+        }
+      }
+    </style>
   </body>
 </html>
